--- a/galerie.html
+++ b/galerie.html
@@ -56,34 +56,34 @@
         <div class="galerie-grid">
 
           <div class="galerie-item">Eiffelova věž
-            <img class="galerie-photo" src="photos/pexels-flo-dahm-699466.jpg" alt="Eiffelova věž">
+            <img class="galerie-photo" src="photos/pexels-flo-dahm-699466.jpg" alt="Eiffelova věž - fotografie">
           </div>
           <div class="galerie-item"> Vítězný oblouk
-            <img class="galerie-photo" src="photos/pexels-pixabay-2344.jpg" alt="Vítězný oblouk">
+            <img class="galerie-photo" src="photos/pexels-pixabay-2344.jpg" alt="Vítězný oblouk - fotografie">
           </div>
           <div class="galerie-item"> Paříž
-            <img class="galerie-photo" src="photos/pexels-chris-molloy-1308940.jpg" alt="Paříž">
+            <img class="galerie-photo" src="photos/pexels-chris-molloy-1308940.jpg" alt="Paříž - fotografie">
           </div>
           <div class="galerie-item"> Notre-Dame
-            <img class="galerie-photo" src="photos/pexels-photo-5440810.jpg" alt="Katedrála Notre-Dame">
+            <img class="galerie-photo" src="photos/pexels-photo-5440810.jpg" alt="Katedrála Notre-Dame - fotografie">
           </div>
           <div class="galerie-item">Louvre
-            <img class="galerie-photo" src="photos/pexels-vlada-karpovich-4452036.jpg" alt="Loovre">
+            <img class="galerie-photo" src="photos/pexels-vlada-karpovich-4452036.jpg" alt="Louvre - fotografie">
           </div>
           <div class="galerie-item">Londýn
-            <img class="galerie-photo" src="photos/pexels-pixabay-460672.jpg" alt="Londýn">
+            <img class="galerie-photo" src="photos/pexels-pixabay-460672.jpg" alt="Londýn - fotografie">
           </div>
           <div class="galerie-item">Tower Bridge
-            <img class="galerie-photo" src="photos/pexels-chris-schippers-427679.jpg" alt="Tower Bridge">
+            <img class="galerie-photo" src="photos/pexels-chris-schippers-427679.jpg" alt="Tower Bridge - fotografie">
           </div>
-          <div class="galerie-item">Wheel of London
-            <img class="galerie-photo" src="photos/pexels-chait-goli-1796715.jpg" alt=" Wheel of London">
+          <div class="galerie-item">London Eye
+            <img class="galerie-photo" src="photos/pexels-chait-goli-1796715.jpg" alt=" Londýnské oko - fotografie">
           </div>
           <div class="galerie-item">Berlín
-            <img class="galerie-photo" src="photos/pexels-ingo-joseph-109630.jpg" alt="Berlín">
+            <img class="galerie-photo" src="photos/pexels-ingo-joseph-109630.jpg" alt="Berlín - fotografie">
           </div>
           <div class="galerie-item">Reichstag
-            <img class="galerie-photo" src="photos/pexels-niki-nagy-1128416.jpg" alt=" Reichstag">
+            <img class="galerie-photo" src="photos/pexels-niki-nagy-1128416.jpg" alt=" Reichstag - fotografie">
           </div>
 
         </div>
