--- a/kontakt.html
+++ b/kontakt.html
@@ -66,7 +66,7 @@
           <input type="tel" id="Tel" name="Tel"><br>
           <label for="E-mail">E-mail:</label><br>
           <input type="email" id="E-mail" name="E-mail"><br>
-          <input type="submit" class="sButton">
+          <input type="submit" class="sButton" value="Zaregistrovat se">
 
         </form>
 
