--- a/kontakt.html
+++ b/kontakt.html
@@ -37,7 +37,7 @@
 
     <nav class="navigation">
       <ul class="nav-column">
-        <li class="nav-column"><a href="projekt.html" class="nav-button">Úvod</a></li>
+        <li class="nav-column"><a href="index.html" class="nav-button">Úvod</a></li>
         <li class="nav-column"><a href="galerie.html" class="nav-button">Galerie</a></li>
         <li class="nav-column"><a href="destinace.html" class="nav-button">Destinace</a></li>
         <li class="nav-column"><a href="otazkyARady.html" class="nav-button">Otázky a rady</a></li>
